--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h1>Título</h1>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Sobre Nós</a></li>
-            <li><a href="#">Produtos</a></li>
-            <li><a href="#">Contato</a></li>
+            <li><a href="#">Unidade 1</a></li>
+            <li><a href="#">Guia de Estudo</a></li>
+            <li><a href="#">Plano de Ensino</a></li>
+            <li><a href="#">Quem Somos</a></li>
           </ul>
           
     </nav>
