--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <h1>Título</h1>
     <nav>
         <ul>
-            <li><a href="#">Unidade 1</a></li>
-            <li><a href="#">Guia de Estudo</a></li>
-            <li><a href="#">Plano de Ensino</a></li>
-            <li><a href="#">Quem Somos</a></li>
+            <li><a href="unidade.html">Unidade 1</a></li>
+            <li><a href="guia-de-estudo.html">Guia de Estudo</a></li>
+            <li><a href="plano-de-ensino.html">Plano de Ensino</a></li>
+            <li><a href="quem-somos.html">Quem Somos</a></li>
           </ul>
           
     </nav>
