--- a/quem-somos.html
+++ b/quem-somos.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Quem Somos</title>
 </head>
 <body>
-    
+    <h1>Quem Somos</h1>
+    <nav>
+        <ul>
+            <li><a href="unidade.html">Unidade 1</a></li>
+            <li><a href="guia-de-estudo.html">Guia de Estudo</a></li>
+            <li><a href="plano-de-ensino.html">Plano de Ensino</a></li>
+            <li><a href="quem-somos.html">Quem Somos</a></li>
+          </ul>
+          
+    </nav>
 </body>
 </html>
