--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Título</h1>
+    <h1>Home</h1>
     <nav>
         <ul>
             <li><a href="unidade.html">Unidade 1</a></li>
