logo fatec, favicon
logo com link para home
favicon mouse cringe

--- a/quem-somos.html
+++ b/quem-somos.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="imagens/Mouse-48.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <title>Quem Somos</title>
 </head>
 <body>
-    <h1>Quem Somos</h1>
+    <header>
+        <a href="index.html">
+        <img src="imagens/FATEC_SENAI_MT-01.png" alt="Logo FATEC"></a>
+    </header>
+    
     <nav>
         <ul>
             <li><a href="unidade.html">Unidade 1</a></li>
@@ -18,5 +23,7 @@
           </ul>
           
     </nav>
+
+    <h1>Quem Somos</h1>
 </body>
 </html>
