--- a/index.html
+++ b/index.html
@@ -20,5 +20,25 @@
           </ul>
           
     </nav>
+
+    <main>
+        <div class="container">
+            <div class="item"><a href="unidade.html">
+                <img src="imagens/unidade-1.png" alt="foto de gatinho" class="tamanho-img"></a>
+            </div>
+
+            <div class="item"><a href="guia-de-estudo.html">
+                <img src="imagens/guia-de-estudo.png" alt="foto de gatinho" class="tamanho-img"></a>
+            </div>
+
+            <div class="item"><a href="plano-de-ensino.html">
+                <img src="imagens/plano-de-ensino.png" alt="foto de gatinho" class="tamanho-img"></a>
+            </div>
+
+            <div class="item"><a href="quem-somos.html">
+                <img src="imagens/quem-somos.png" alt="foto de gatinho" class="tamanho-img"></a>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
