--- a/plano-de-ensino.html
+++ b/plano-de-ensino.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <a href="index.html">
-        <img src="imagens/FATEC_SENAI_MT-01.png" alt="Logo FATEC"></a>
+        <img src="imagens/FATEC_SENAI_MT-01.png" alt="Logo FATEC" class="logo-fatec"></a>
     </header>
     
     <nav>
