adicionando marcação de conteúdo na página

--- a/unidade.html
+++ b/unidade.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/Mouse-48.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="home.css">
     <title>Unidade 1</title>
 </head>
 <body>
@@ -24,5 +25,24 @@
     </nav>
 
     <h1>Unidade 1</h1>
+
+    <main>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam ut cum possimus sapiente veritatis sint quia obcaecati harum fugiat sit est ea, perferendis distinctio, modi placeat numquam vitae porro iure.</p>
+
+        <img src="imagens/fusca.jpeg" alt="eu fusca não estou a venda" class="fusca">
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, recusandae repudiandae necessitatibus assumenda sunt officiis. Ratione, aut, nulla labore totam ut quia vitae quam, iure necessitatibus deleniti magnam natus commodi!</p>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut facilis voluptas corrupti beatae qui accusamus laborum temporibus, magni esse error adipisci impedit magnam, fuga delectus aspernatur voluptates dolore provident consequuntur.</p>
+
+        <audio preload="metadata" controls>
+            <source src="media/happy-mistake.mp3" type="audio/mpeg">
+            <source src="media/happy-mistake.mp3" type="audio/ogg">
+            <source src="media/happy-mistake.wav" type="audio/wav">
+            <p>Infelizmente seu navegador não consegue  reproduzir áudio. <a href="media/happy-mistake.mp3">Clique aqui para baixar o arquivo MP3.</a></p>
+        </audio>
+
+
+    </main>
 </body>
 </html>
