colocando caixa de conteúdos nas páginas

--- a/guia-de-estudo.html
+++ b/guia-de-estudo.html
@@ -14,7 +14,7 @@
         <img src="imagens/FATEC_SENAI_MT-01.png" alt="Logo FATEC" class="logo-fatec"></a>
     </header>
     
-    <nav>
+    <nav> <!-- inicio menu -->
         <ul>
             <li><a href="unidade.html">Unidade 1</a></li>
             <li><a href="guia-de-estudo.html">Guia de Estudo</a></li>
@@ -22,8 +22,12 @@
             <li><a href="quem-somos.html">Quem Somos</a></li>
           </ul>
           
-    </nav>
+    </nav> <!-- fim menu -->
 
     <h1>Guia de Estudo</h1>
+
+    <main>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam quas necessitatibus fugit incidunt quisquam expedita consequuntur, amet magnam labore obcaecati. Aspernatur tempora ipsum quidem in, tempore odit facilis iste rem?</p>
+    </main>
 </body>
 </html>
