--- a/unidade.html
+++ b/unidade.html
@@ -15,14 +15,14 @@
         <img src="imagens/FATEC_SENAI_MT-01.png" alt="Logo FATEC" class="logo-fatec"></a>
     </header>
 
-    <nav>
+    <nav> <!-- inicio menu -->
         <ul>
             <li><a href="unidade.html">Unidade 1</a></li>
             <li><a href="guia-de-estudo.html">Guia de Estudo</a></li>
             <li><a href="plano-de-ensino.html">Plano de Ensino</a></li>
             <li><a href="quem-somos.html">Quem Somos</a></li>
           </ul>              
-    </nav>
+    </nav> <!-- fim menu -->
 
     <h1>Unidade 1</h1>
 
