--- a/quem-somos.html
+++ b/quem-somos.html
@@ -14,7 +14,7 @@
         <img src="imagens/FATEC_SENAI_MT-01.png" alt="Logo FATEC" class="logo-fatec"></a>
     </header>
     
-    <nav>
+    <nav> <!-- inicio menu -->
         <ul>
             <li><a href="unidade.html">Unidade 1</a></li>
             <li><a href="guia-de-estudo.html">Guia de Estudo</a></li>
@@ -22,8 +22,10 @@
             <li><a href="quem-somos.html">Quem Somos</a></li>
           </ul>
           
-    </nav>
+    </nav> <!-- fim menu -->
 
     <h1>Quem Somos</h1>
+
+    <main></main>
 </body>
 </html>
