testando pop up

--- a/guia-de-estudo.html
+++ b/guia-de-estudo.html
@@ -28,6 +28,29 @@
 
     <main>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam quas necessitatibus fugit incidunt quisquam expedita consequuntur, amet magnam labore obcaecati. Aspernatur tempora ipsum quidem in, tempore odit facilis iste rem?</p>
+
+        <!--inicio pop up-->
+        <!-- div com o conteúdo do pop up -->
+        <div id="openModal" class="modalDialog">
+            <div>
+                <a href="#close" title="Close" class="close">X</a>
+                <h1>Acessibilidade</h1>
+                <p><b>Acessibilidade</b> na web significa que pessoas com deficiência podem usar a web. Mais
+                    especialmente, a acessibilidade na web significa que pessoas com deficiência podem perceber,
+                    entender, navegar, interagir e construir para a web. E mais, ela também beneficia outras pessoas,
+                    incluindo pessoas idosas com capacidades em mudança devido ao envelhecimento - <i>w3c.br/ -
+                    acesso 09/2018</i></p>
+                <img src="imagens/acessibilidade.jpg" alt="logo acessibilidade">
+            </div>
+        </div>
+
+        <!-- div que chama o pop up -->
+        <div class="acessibilidade-text">
+            <h3>Acessibilidade</h3>
+            <p>Torne seu site acessível utilizando 5 dicas indispensáveis para qualquer site. -
+            <a href="#openModal">Clique aqui</a>.</p>
+        </div>
+        <!--fim pop up-->
     </main>
 </body>
 </html>
