--- a/quem-somos.html
+++ b/quem-somos.html
@@ -26,6 +26,8 @@
 
     <h1>Quem Somos</h1>
 
-    <main></main>
+    <main>
+        <img src="imagens/cinco.gif" alt="Buzz Lightyear">
+    </main>
 </body>
 </html>
