--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/Mouse-48.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="home.css"> <!--se precisar criar uma página de estilo só para as outras páginas-->
+    <!-- <link rel="stylesheet" href="style.css"> -->
+    <link rel="stylesheet" href="home.css">
     <title>Home</title>
 </head>
 <body>
     <h1>Home</h1>
-    <nav>
+    <nav> <!-- inicio menu -->
         <ul>
             <li><a href="unidade.html">Unidade 1</a></li>
             <li><a href="guia-de-estudo.html">Guia de Estudo</a></li>
@@ -19,10 +19,10 @@
             <li><a href="quem-somos.html">Quem Somos</a></li>
           </ul>
           
-    </nav>
+    </nav> <!-- fim menu -->
 
     <main>
-        <div class="container">
+        <div class="container">  <!-- inicio caixa dos conteúdos -->
             <div class="item"><a href="unidade.html">
                 <img src="imagens/unidade-1.png" alt="foto de gatinho" class="tamanho-img"></a>
             </div>
@@ -38,7 +38,7 @@
             <div class="item"><a href="quem-somos.html">
                 <img src="imagens/quem-somos.png" alt="foto de gatinho" class="tamanho-img"></a>
             </div>
-        </div>
+        </div>  <!-- fim caixa dos conteúdos -->
     </main>
 </body>
 </html>
