--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <img src="imagens/unidade-1.png" alt="Unidade 1" class="d-block w-100"/>
                     <div class="carousel-caption">
                         <!-- <h5>Unidade 1</h5> -->
-                        <a href="#" class="btn btn-dark">Ver projetos</a>
+                        <a href="unidade.html" class="btn btn-dark">Ver projetos</a>
                     </div>
                 </div>
 
@@ -118,7 +118,7 @@
                     <img src="imagens/guia-de-estudo.png" alt="Guia de Estudos" class="d-block w-100"/>
                     <div class="carousel-caption">
                         <!-- <h5>Guia de Estudos</h5> -->
-                        <a href="#" class="btn btn-dark">Ver projetos</a>
+                        <a href="guia-de-estudo.html" class="btn btn-dark">Ver projetos</a>
                     </div>
                 </div>
 
@@ -126,7 +126,7 @@
                     <img src="imagens/plano-de-ensino.png" alt="Plano de Ensino" class="d-block w-100"/>
                     <div class="carousel-caption">
                         <!-- <h5>Plano de Ensino</h5> -->
-                        <a href="#" class="btn btn-dark">Ver projetos</a>
+                        <a href="plano-de-ensino.html" class="btn btn-dark">Ver projetos</a>
                     </div>
                 </div>
 
@@ -134,7 +134,7 @@
                     <img src="imagens/quem-somos.png" alt="Quem Somos" class="d-block w-100"/>
                     <div class="carousel-caption">
                         <!-- <h5>Quem Somos</h5> -->
-                        <a href="#" class="btn btn-dark">Ver projetos</a>
+                        <a href="quem-somos.html" class="btn btn-dark">Ver projetos</a>
                     </div>
                 </div>
             </div>
