--- a/plano-de-ensino.html
+++ b/plano-de-ensino.html
@@ -66,6 +66,8 @@
     </nav>
     <!-- FIM NAVBAR menu-->
     
-    
+    <div class="container-plano">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Neque, sapiente est soluta iure ea reprehenderit nulla pariatur dolor iusto esse tempore totam incidunt facere autem nesciunt repellendus quae aspernatur error?</p>
+    </div>
 </body>
 </html>
